Initial commit or update

--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,6 @@
 </header>
 
 <hr>
-
 <nav class="b">
   <a href="index.html">Home</a> &gt; <span>Courses</span>
 </nav>
@@ -37,86 +36,31 @@
 </section>
 
 <section data-aos="fade-up">
-  <h2 style="text-align:center;">Explore Courses</h2>
-  <p style="text-align:center; max-width:600px; margin:0 auto 20px;">
-    Discover the best courses to boost your skills in programming, data science, AI, and more — all for free!
-  </p>
+  <h2>Explore Courses</h2>
+  <p>Discover the best courses to boost your skills in programming, data science, AI, and more — all for free!</p>
 
-  <div class="course-grid">
-    <!-- Row 1 -->
-    <div class="course-box" data-aos="zoom-in">
-      <a href="HTMLandCSS.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="HTML CSS"></a>
-      <h3>HTML & CSS</h3>
-      <p>Design responsive, modern websites.</p>
+  <!-- Slider -->
+  <div class="slider-container">
+    <button class="prev-btn">&#10094;</button>
+    <div class="course-slider">
+      <div class="course-grid">
+        <!-- Courses -->
+        <div class="course-box"><a href="HTMLandCSS.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="HTML CSS"></a><h3>HTML & CSS</h3><p>Design responsive, modern websites.</p></div>
+        <div class="course-box"><a href="JavaScript.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript"></a><h3>JavaScript</h3><p>Make your websites interactive.</p></div>
+        <div class="course-box"><img src="images/python.png" alt="Python Logo"><h3>Python Programming</h3><p>Popular language for web, AI & more.</p></div>
+        <div class="course-box"><a href="java.html"><img src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg" alt="Java"></a><h3>Java Programming</h3><p>Build apps & enterprise solutions.</p></div>
+        <div class="course-box"><a href="DSA.html"><img src="D.jpg" alt="DSA"></a><h3>Data Structures & Algorithms</h3><p>Essential for coding interviews.</p></div>
+        <div class="course-box"><a href="ML.html"><img src="m.jpg" alt="ML"></a><h3>Machine Learning</h3><p>Build AI models and systems.</p></div>
+        <div class="course-box"><a href="DataScience.html"><img src="Da.jpg" alt="Data Science"></a><h3>Data Science</h3><p>Analyze data and discover insights.</p></div>
+        <div class="course-box"><a href="SQLDatabases.html"><img src="Q.png" alt="SQL"></a><h3>SQL & Databases</h3><p>Manage and query data efficiently.</p></div>
+        <div class="course-box"><a href="AWSBasics.html"><img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a><h3>AWS Basics</h3><p>Intro to Amazon's cloud platform.</p></div>
+        <div class="course-box"><a href="DockerContainers.html"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Docker_%28container_engine%29_logo.svg" alt="Docker"></a><h3>Docker & Containers</h3><p>Package and deploy applications.</p></div>
+        <div class="course-box"><a href="LinuxEssentials.html"><img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" alt="Linux"></a><h3>Linux Essentials</h3><p>Basics of Linux OS.</p></div>
+        <div class="course-box"><a href="GitGitHub.html"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg" alt="Git"></a><h3>Git & GitHub</h3><p>Version control and collaboration.</p></div>
+        <div class="course-box"><a href="ProblemSolving.html"><img src="P.jpg" alt="Problem Solving"></a><h3>Problem Solving</h3><p>Sharpen logic and coding skills.</p></div>
+      </div>
     </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="JavaScript.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript"></a>
-      <h3>JavaScript</h3>
-      <p>Make your websites interactive.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <img src="images/python.png" alt="Python Logo">
-      <h3>Python Programming</h3>
-      <p>Popular language for web, AI & more.</p>
-    </div>
-
-    <!-- Row 2 -->
-    <div class="course-box" data-aos="zoom-in">
-      <a href="java.html"><img src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg" alt="Java"></a>
-      <h3>Java Programming</h3>
-      <p>Build apps & enterprise solutions.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="DSA.html"><img src="D.jpg" alt="DSA"></a>
-      <h3>Data Structures & Algorithms</h3>
-      <p>Essential for coding interviews.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="ML.html"><img src="m.jpg" alt="ML"></a>
-      <h3>Machine Learning</h3>
-      <p>Build AI models and systems.</p>
-    </div>
-
-    <!-- Row 3 -->
-    <div class="course-box" data-aos="zoom-in">
-      <a href="DataScience.html"><img src="Da.jpg" alt="Data Science"></a>
-      <h3>Data Science</h3>
-      <p>Analyze data and discover insights.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="SQLDatabases.html"><img src="Q.png" alt="SQL"></a>
-      <h3>SQL & Databases</h3>
-      <p>Manage and query data efficiently.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="AWSBasics.html"><img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a>
-      <h3>AWS Basics</h3>
-      <p>Intro to Amazon's cloud platform.</p>
-    </div>
-
-    <!-- Row 4 -->
-    <div class="course-box" data-aos="zoom-in">
-      <a href="DockerContainers.html"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Docker_%28container_engine%29_logo.svg" alt="Docker"></a>
-      <h3>Docker & Containers</h3>
-      <p>Package and deploy applications.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="LinuxEssentials.html"><img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" alt="Linux"></a>
-      <h3>Linux Essentials</h3>
-      <p>Basics of Linux OS.</p>
-    </div>
-    <div class="course-box" data-aos="zoom-in">
-      <a href="GitGitHub.html"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg" alt="Git"></a>
-      <h3>Git & GitHub</h3>
-      <p>Version control and collaboration.</p>
-    </div>
-
-    <!-- Row 5 -->
-    <div class="course-box" data-aos="zoom-in">
-      <a href="ProblemSolving.html"><img src="P.jpg" alt="Problem Solving"></a>
-      <h3>Problem Solving</h3>
-      <p>Sharpen logic and coding skills.</p>
-    </div>
+    <button class="next-btn">&#10095;</button>
   </div>
 </section>
 
@@ -136,66 +80,85 @@
 </section>
 
 <hr>
-
 <footer class="site-footer">
   <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
-    <ul>
-      <li><a href="HTMLandCSS.html" data-aos="fade-up">HTML & CSS</a></li>
-      <li><a href="JavaScript.html" data-aos="fade-up">JavaScript</a></li>
-      <li><a href="Python.html" data-aos="fade-up">Python Programming</a></li>
-      <li><a href="java.html" data-aos="fade-up">Java Programming</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Data & AI</h3>
-    <ul>
-      <li><a href="DSA.html" data-aos="fade-up">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html" data-aos="fade-up">Machine Learning</a></li>
-      <li><a href="DataScience.html" data-aos="fade-up">Data Science</a></li>
-      <li><a href="SQLDatabases.html" data-aos="fade-up">SQL & Databases</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
-    <ul>
-      <li><a href="AWSBasics.html" data-aos="fade-up">AWS Basics</a></li>
-      <li><a href="DockerContainers.html" data-aos="fade-up">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html" data-aos="fade-up">Linux Essentials</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
-    <ul>
-      <li><a href="GitGitHub.html" data-aos="fade-up">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html" data-aos="fade-up">Problem Solving</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Company</h3>
-    <ul>
-      <li><a href="AboutUs.html" data-aos="fade-up">About Us</a></li>
-      <li><a href="ContactUs.html" data-aos="fade-up">Contact Us</a></li>
-      <li><a href="Terms.html" data-aos="fade-up">Terms of Use</a></li>
-      <li><a href="Privacy.html" data-aos="fade-up">Privacy Policy</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-bottom">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
+  <div class="footer-column"><h3>Web & Programming</h3><ul><li><a href="HTMLandCSS.html">HTML & CSS</a></li><li><a href="JavaScript.html">JavaScript</a></li><li><a href="Python.html">Python Programming</a></li><li><a href="java.html">Java Programming</a></li></ul></div>
+  <div class="footer-column"><h3>Data & AI</h3><ul><li><a href="DSA.html">Data Structures & Algorithms</a></li><li><a href="ML.html">Machine Learning</a></li><li><a href="DataScience.html">Data Science</a></li><li><a href="SQLDatabases.html">SQL & Databases</a></li></ul></div>
+  <div class="footer-column"><h3>Cloud & DevOps</h3><ul><li><a href="AWSBasics.html">AWS Basics</a></li><li><a href="DockerContainers.html">Docker & Containers</a></li><li><a href="LinuxEssentials.html">Linux Essentials</a></li></ul></div>
+  <div class="footer-column"><h3>Other Useful Skills</h3><ul><li><a href="GitGitHub.html">Git & GitHub</a></li><li><a href="ProblemSolving.html">Problem Solving</a></li></ul></div>
+  <div class="footer-column"><h3>Company</h3><ul><li><a href="AboutUs.html">About Us</a></li><li><a href="ContactUs.html">Contact Us</a></li><li><a href="Terms.html">Terms of Use</a></li><li><a href="Privacy.html">Privacy Policy</a></li></ul></div>
+  <div class="footer-bottom"><span><b>Udemy</b> &copy;2025 Udemy, Inc.</span><span>English</span></div>
 </footer>
 
 <!-- AOS Script -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
+
+<!-- Slider JS -->
+<script>
+  const courseGrid = document.querySelector('.course-grid');
+  const prevBtn = document.querySelector('.prev-btn');
+  const nextBtn = document.querySelector('.next-btn');
+  const courseBoxes = document.querySelectorAll('.course-box');
+
+  let currentIndex = 0;
+
+  function getVisibleItems() {
+    if (window.innerWidth < 480) return 1;
+    if (window.innerWidth < 768) return 2;
+    return 3;
+  }
+
+  function updateSlider() {
+    const itemWidth = courseBoxes[0].offsetWidth + 25; // include gap
+    courseGrid.style.transform = `translateX(-${currentIndex * itemWidth}px)`;
+  }
+
+  nextBtn.addEventListener('click', () => {
+    const visible = getVisibleItems();
+    if (currentIndex < courseBoxes.length - visible) {
+      currentIndex++;
+    } else {
+      currentIndex = 0; // loop back
+    }
+    updateSlider();
+  });
+
+  prevBtn.addEventListener('click', () => {
+    if (currentIndex > 0) {
+      currentIndex--;
+    } else {
+      currentIndex = courseBoxes.length - getVisibleItems(); // go to last
+    }
+    updateSlider();
+  });
+
+  window.addEventListener('resize', updateSlider);
+
+  // Autoplay with pause on hover
+  let autoSlide = setInterval(() => {
+    const visible = getVisibleItems();
+    if (currentIndex < courseBoxes.length - visible) {
+      currentIndex++;
+    } else {
+      currentIndex = 0;
+    }
+    updateSlider();
+  }, 3000);
+
+  document.querySelector('.slider-container').addEventListener('mouseenter', () => clearInterval(autoSlide));
+  document.querySelector('.slider-container').addEventListener('mouseleave', () => {
+    autoSlide = setInterval(() => {
+      const visible = getVisibleItems();
+      if (currentIndex < courseBoxes.length - visible) {
+        currentIndex++;
+      } else {
+        currentIndex = 0;
+      }
+      updateSlider();
+    }, 3000);
+  });
+</script>
 
 </body>
 </html>
